# aquafin

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  accounts.py  analytics.py  auth.py  exports.py  imports.py  transactions.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  openapi.py
backend/app/models/: __init__.py  account.py  base.py  categorization_rule.py  category.py  import_record.py  transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  analytics.py  export.py  import_record.py  transaction.py  user.py
backend/app/seeds/: __init__.py  categories.py
backend/app/services/: __init__.py  account_service.py  analytics_service.py  export_service.py  import_service.py  retention.py  transaction_service.py
backend/app/services/categorization/: __init__.py  engine.py  keywords.py  models.py  patterns.py
backend/app/services/parser/: __init__.py  (+6 more)
backend/tests/: conftest.py  test_accounts.py  test_analytics.py  test_auth.py  test_data_isolation.py  test_exports.py  test_health.py  test_imports.py  test_models.py  test_retention.py  test_sql_injection.py  test_transactions.py
backend/tests/fixtures/: bank_sample.csv  paypal_sample.csv  satispay_sample.csv
backend/tests/test_categorization/: test_engine.py  test_keywords.py  test_patterns.py
backend/tests/test_parser/: test_bank_csv.py  test_paypal.py  test_pdf_parser.py  test_registry.py  test_satispay.py
(+78 files in other folders)
